tests/fail/fail-printf.mc
/* Should be illegal to redefine */
void printf() {}
